--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,12 @@
 name = "mortgage_sim"
 version = "0.1.0"
 edition = "2024"
+license = "MIT"
 
 [profile.release]
-lto = "thin"
+lto = true
+strip = true
+opt-level = "s"
 
 [dependencies]
 inquire = "0.9.1"
