--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
             target: x86_64-apple-darwin
 
           - build: windows
-            os: windows-latest
+            os: windows-2022
             target: x86_64-pc-windows-gnu
 
     steps:
