--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,8 @@ jobs:
             target: x86_64-apple-darwin
 
           - build: windows
-            os: ubuntu-latest
-            target: x86_64-pc-windows-gnu
+            os: windows-latest
+            target: x86_64-pc-windows-msvc
 
     steps:
       - name: Checkout
